k8s/backend.yaml
# backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ghcr.io/thaiha-hub/le-guestbook-backend:latest
          ports:
            - containerPort: 8080
          resources:
              requests:
                cpu: "100m"
                memory: "128Mi"
              limits:
                cpu: "200m"
                memory: "256Mi"
